--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <label for="rateSlider">🗣️ Speaking Rate: <span id="rateValue">0.85</span></label><br>
       <input type="range" id="rateSlider" min="0.4" max="1.2" step="0.05" value="0.85" style="width: 60%;">
     </div>
-    <button onclick="generateScript()">🎧 Start Session</button>
+    <button id="startBtn">🎧 Start Session</button>
     <button onclick="clearGoals()">🧹 Clear Goals</button>
     <button onclick="window.location.reload()">🔁 Restart</button>
     <button onclick="showAndroidVoiceHelp()">📱 Android Voice Setup</button>
@@ -145,7 +145,10 @@
       alert("🍎 To set a voice on iPhone:\n\n1. Open Settings → Accessibility → Spoken Content\n2. Tap 'Voices'\n3. Choose your language (e.g. English)\n4. Download and select a voice like Samantha or Karen\n\nThen refresh this page and try voice selection again.");
     }
 
-    async function generateScript() {
+    async function startSession() {
+      const silentUnlock = new SpeechSynthesisUtterance(" ");
+      speechSynthesis.speak(silentUnlock);  // unlock speech on mobile
+
       const goals = [];
       for (let i = 1; i <= 5; i++) {
         const val = document.getElementById(`goal${i}`).value.trim();
@@ -154,6 +157,8 @@
       }
 
       if (goals.length === 0) return;
+
+      document.getElementById("controls").style.display = "none";
 
       const response = await fetch('https://openai-hypnosis-backend.onrender.com/generate-reasons', {
         method: 'POST',
@@ -185,7 +190,6 @@
       ];
 
       const fullScript = [...induction, ...affirmations, ...closing];
-      document.getElementById("controls").style.display = "none";
       playScript(fullScript);
     }
 
@@ -211,6 +215,8 @@
 
       speakLine(0);
     }
+
+    document.getElementById("startBtn").addEventListener("click", startSession);
   </script>
 </body>
 </html>
